--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "consolecolor",
+"name": "@joelmohh/console-color",
 "version": "1.0.0",
 "description": "Modern console styling with ANSI codes and HEX colors",
 "main": "index.js",
